basic html layout

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Group 1 Canvas Project</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="./03-css/style.css">
+    <link rel="stylesheet" type="text/css" href="./03-css/style2.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.0/css/all.css"
@@ -14,6 +14,138 @@
 </head>
 
 <body>
+    <div id="container">
+        <div id="sideMenu">
+            <div id="sideMenuBtnWrapper">
+                <div class="sideMenuBtnsRow">
+                    <button class="sideMenuBtn">Style 1</button>
+                    <button class="sideMenuBtn">Style 2</button>
+                </div>
+                <div class="sideMenuBtnsRow">
+                    <button class="sideMenuBtn">Style 3</button>
+                    <button class="sideMenuBtn">Style 4</button>
+                </div>
+                <div class="sideMenuBtnsRow">
+                    <button class="sideMenuBtn">Style 5</button>
+                    <button class="sideMenuBtn">Style 6</button>
+                </div>
+                <div class="sideMenuBtnsRow">
+                    <button class="sideMenuBtn">Style 1</button>
+                    <button class="sideMenuBtn">Style 2</button>
+                </div>
+                <div class="sideMenuBtnsRow">
+                    <button class="sideMenuBtn">Style 3</button>
+                    <button class="sideMenuBtn">Style 4</button>
+                </div>
+                <div class="sideMenuBtnsRow">
+                    <button class="sideMenuBtn">Style 5</button>
+                    <button class="sideMenuBtn">Style 6</button>
+                </div>
+                <div class="sideMenuBtnsRow">
+                    <button class="sideMenuBtn">Style 1</button>
+                    <button class="sideMenuBtn">Style 2</button>
+                </div>
+                <div class="sideMenuBtnsRow">
+                    <button class="sideMenuBtn">Style 3</button>
+                    <button class="sideMenuBtn">Style 4</button>
+                </div>
+                <div class="sideMenuBtnsRow">
+                    <button class="sideMenuBtn">Style 5</button>
+                    <button class="sideMenuBtn">Style 6</button>
+                </div>
+                <div class="sideMenuBtnsRow">
+                    <button class="sideMenuBtn">Style 1</button>
+                    <button class="sideMenuBtn">Style 2</button>
+                </div>
+                <div class="sideMenuBtnsRow">
+                    <button class="sideMenuBtn">Style 3</button>
+                    <button class="sideMenuBtn">Style 4</button>
+                </div>
+                <div class="sideMenuBtnsRow">
+                    <button class="sideMenuBtn">Style 5</button>
+                    <button class="sideMenuBtn">Style 6</button>
+                </div>
+                <div class="sideMenuBtnsRow">
+                    <button class="sideMenuBtn">Style 1</button>
+                    <button class="sideMenuBtn">Style 2</button>
+                </div>
+                <div class="sideMenuBtnsRow">
+                    <button class="sideMenuBtn">Style 3</button>
+                    <button class="sideMenuBtn">Style 4</button>
+                </div>
+                <div class="sideMenuBtnsRow">
+                    <button class="sideMenuBtn">Style 5</button>
+                    <button class="sideMenuBtn">Style 6</button>
+                </div>
+                <div class="sideMenuBtnsRow">
+                    <button class="sideMenuBtn">Style 1</button>
+                    <button class="sideMenuBtn">Style 2</button>
+                </div>
+                <div class="sideMenuBtnsRow">
+                    <button class="sideMenuBtn">Style 3</button>
+                    <button class="sideMenuBtn">Style 4</button>
+                </div>
+                <div class="sideMenuBtnsRow">
+                    <button class="sideMenuBtn">Style 5</button>
+                    <button class="sideMenuBtn">Style 6</button>
+                </div>
+                <div class="sideMenuBtnsRow">
+                    <button class="sideMenuBtn">Style 1</button>
+                    <button class="sideMenuBtn">Style 2</button>
+                </div>
+                <div class="sideMenuBtnsRow">
+                    <button class="sideMenuBtn">Style 3</button>
+                    <button class="sideMenuBtn">Style 4</button>
+                </div>
+                <div class="sideMenuBtnsRow">
+                    <button class="sideMenuBtn">Style 5</button>
+                    <button class="sideMenuBtn">Style 6</button>
+                </div>
+                <div class="sideMenuBtnsRow">
+                    <button class="sideMenuBtn">Style 1</button>
+                    <button class="sideMenuBtn">Style 2</button>
+                </div>
+                <div class="sideMenuBtnsRow">
+                    <button class="sideMenuBtn">Style 3</button>
+                    <button class="sideMenuBtn">Style 4</button>
+                </div>
+                <div class="sideMenuBtnsRow">
+                    <button class="sideMenuBtn">Style 5</button>
+                    <button class="sideMenuBtn">Style 6</button>
+                </div>
+            </div>
+        </div>
+        <canvas id="canvas">This is a canvas</canvas>
+    </div>
+    <div id="bottomMenu">
+        <div id="bottomMenuRow">
+            <button class="bottomMenuBtn">Feature 1</button>
+            <button class="bottomMenuBtn">Feature 2</button>
+            <button class="bottomMenuBtn">Feature 3</button>
+            <button class="bottomMenuBtn">Feature 4</button>
+            <button class="bottomMenuBtn">Feature 5</button>
+            <button class="bottomMenuBtn">Feature 6</button>
+            <button class="bottomMenuBtn">Feature 1</button>
+            <button class="bottomMenuBtn">Feature 2</button>
+            <button class="bottomMenuBtn">Feature 3</button>
+            <button class="bottomMenuBtn">Feature 4</button>
+            <button class="bottomMenuBtn">Feature 5</button>
+            <button class="bottomMenuBtn">Feature 6</button>
+            <button class="bottomMenuBtn">Feature 1</button>
+            <button class="bottomMenuBtn">Feature 2</button>
+            <button class="bottomMenuBtn">Feature 3</button>
+            <button class="bottomMenuBtn">Feature 4</button>
+            <button class="bottomMenuBtn">Feature 5</button>
+            <button class="bottomMenuBtn">Feature 6</button>
+            <button class="bottomMenuBtn">Feature 1</button>
+            <button class="bottomMenuBtn">Feature 2</button>
+            <button class="bottomMenuBtn">Feature 3</button>
+            <button class="bottomMenuBtn">Feature 4</button>
+            <button class="bottomMenuBtn">Feature 5</button>
+            <button class="bottomMenuBtn">Feature 6</button>
+        </div>
+    </div>
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -25,7 +157,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-    <script src="./02-javascript/main.js"></script>
+    <script src="./02-javascript/main2.js"></script>
 </body>
 
 </html>
