update html layout

--- a/index.html
+++ b/index.html
@@ -113,12 +113,48 @@
                     <button class="sideMenuBtn">Style 5</button>
                     <button class="sideMenuBtn">Style 6</button>
                 </div>
+                <div class="sideMenuBtnsRow">
+                    <button class="sideMenuBtn">Style 1</button>
+                    <button class="sideMenuBtn">Style 2</button>
+                </div>
+                <div class="sideMenuBtnsRow">
+                    <button class="sideMenuBtn">Style 3</button>
+                    <button class="sideMenuBtn">Style 4</button>
+                </div>
+                <div class="sideMenuBtnsRow">
+                    <button class="sideMenuBtn">Style 5</button>
+                    <button class="sideMenuBtn">Style 6</button>
+                </div>
+                <div class="sideMenuBtnsRow">
+                    <button class="sideMenuBtn">Style 1</button>
+                    <button class="sideMenuBtn">Style 2</button>
+                </div>
+                <div class="sideMenuBtnsRow">
+                    <button class="sideMenuBtn">Style 3</button>
+                    <button class="sideMenuBtn">Style 4</button>
+                </div>
+                <div class="sideMenuBtnsRow">
+                    <button class="sideMenuBtn">Style 5</button>
+                    <button class="sideMenuBtn">Style 6</button>
+                </div>
             </div>
         </div>
         <canvas id="canvas">This is a canvas</canvas>
     </div>
     <div id="bottomMenu">
         <div id="bottomMenuRow">
+            <button class="bottomMenuBtn">Feature 1</button>
+            <button class="bottomMenuBtn">Feature 2</button>
+            <button class="bottomMenuBtn">Feature 3</button>
+            <button class="bottomMenuBtn">Feature 4</button>
+            <button class="bottomMenuBtn">Feature 5</button>
+            <button class="bottomMenuBtn">Feature 6</button>
+            <button class="bottomMenuBtn">Feature 1</button>
+            <button class="bottomMenuBtn">Feature 2</button>
+            <button class="bottomMenuBtn">Feature 3</button>
+            <button class="bottomMenuBtn">Feature 4</button>
+            <button class="bottomMenuBtn">Feature 5</button>
+            <button class="bottomMenuBtn">Feature 6</button>
             <button class="bottomMenuBtn">Feature 1</button>
             <button class="bottomMenuBtn">Feature 2</button>
             <button class="bottomMenuBtn">Feature 3</button>
