--- a/TEST_ONLY/index.html
+++ b/TEST_ONLY/index.html
@@ -15,7 +15,8 @@
         <button id="freeStyle">Draw Free Syle Line</button>
         <button id="rectangle">Draw Rectangle</button>
         <button id="triangle">Draw Triangle</button>
-        <button id="select">Selected Functionilty</button>
+        <button id="circle">circle</button>
+        <button id="cruve">circle</button>
     </div>
     <script src="jquery-3.3.1.min.js"></script>
     <script src="main.js"></script>
