--- a/TEST_ONLY/index.html
+++ b/TEST_ONLY/index.html
@@ -18,6 +18,7 @@
         <button id="select">Selected Functionilty</button>
     </div>
     <script src="jquery-3.3.1.min.js"></script>
+    <script src="globalStyle.js"></script>
     <script src="main.js"></script>
 </body>
 
