--- a/index1.html
+++ b/index1.html
@@ -193,7 +193,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-    <script src="./02-javascript/main2.js"></script>
+    <script src="./02-javascript/main.js"></script>
 </body>
 
 </html>
