--- a/TEST_ONLY/index.html
+++ b/TEST_ONLY/index.html
@@ -16,7 +16,7 @@
         <button id="rectangle">Draw Rectangle</button>
         <button id="triangle">Draw Triangle</button>
         <button id="circle">circle</button>
-        <button id="cruve">circle</button>
+        <button id="curve">curve</button>
         <button id="cruve">circle</button>
     </div>
     <script src="jquery-3.3.1.min.js"></script>
