updated interface, style buttons not yet done

--- a/index.html
+++ b/index.html
@@ -16,48 +16,48 @@
 
     <div class="topbar">
         <img src="./01-assets/img/paint1.png" alt="logo">
-        <h5>untitled - Paint</h5>
+        <h5>untitled - Paint &nbsp; (Canvas Project - Group 1)</h5>
     </div>
 
     <!-- feature section -->
     <div class="feature-wrapper bg-color ridge-border">
         <div class="feature-container">  
             <div class="feature-overflow">              
-            <div class="feature-box">
-                <div class="feature-btn" id=""> <!-- add eventListener here -->
-                    <i class="fas fa-1x fa-slash"></i>
+                <div class="feature-box">
+                    <div class="feature-btn" id=""> <!-- add eventListener here -->
+                        <i class="fas fa-1x fa-slash"></i>
+                    </div>
                 </div>
-            </div>
 
-            <div class="feature-box">
-                <div class="feature-btn" id=""> <!-- add eventListener here -->
-                    <i class="far fa-2x fa-square"></i>
+                <div class="feature-box">
+                    <div class="feature-btn" id=""> <!-- add eventListener here -->
+                        <i class="far fa-2x fa-square"></i>
+                    </div>
                 </div>
-            </div>
 
-            <div class="feature-box">
-                <div class="feature-btn" id=""> <!-- add eventListener here -->
-                    <i class="fas fa-1x fa-slash"></i>
+                <div class="feature-box">
+                    <div class="feature-btn" id=""> <!-- add eventListener here -->
+                        <i class="fas fa-1x fa-slash"></i>
+                    </div>
                 </div>
-            </div>
-    
-            <div class="feature-box">
-                <div class="feature-btn" id=""> <!-- add eventListener here -->
-                    <i class="far fa-2x fa-square"></i>
+        
+                <div class="feature-box">
+                    <div class="feature-btn" id=""> <!-- add eventListener here -->
+                        <i class="far fa-2x fa-square"></i>
+                    </div>
                 </div>
-            </div>
 
-            <div class="feature-box">
-                <div class="feature-btn" id=""> <!-- add eventListener here -->
-                    <i class="far fa-2x fa-square"></i>
+                <div class="feature-box">
+                    <div class="feature-btn" id=""> <!-- add eventListener here -->
+                        <i class="far fa-2x fa-square"></i>
+                    </div>
                 </div>
-            </div>
 
-            <div class="feature-box">
-                <div class="feature-btn" id=""> <!-- add eventListener here -->
-                    <i class="fas fa-1x fa-slash"></i>
+                <div class="feature-box">
+                    <div class="feature-btn" id=""> <!-- add eventListener here -->
+                        <i class="fas fa-1x fa-slash"></i>
+                    </div>
                 </div>
-            </div>
             </div>
         </div>
     </div>
@@ -65,7 +65,7 @@
 
     <!-- canvas section -->
     <div class="canvas-wrapper">
-        <canvas class="canvas" id="canvas-real" style="border: 2px #111 solid">canvas real</canvas>
+        <canvas class="canvas" id="canvas-real" style="border: 2px #dfdfdf solid; border-style: ridge;">canvas real</canvas>
 <!-- #dfdfdf -->
         <canvas class="canvas" id="canvas-draft">canvas draft</canvas>
     </div>
@@ -74,7 +74,6 @@
     <!-- style section -->
     <div class="style-wrapper bg-color ridge-border">
         <div class="style-container">
-
             <!-- color picker -->
             <div class="color-container">
                 <div class="color-box">
