--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="feature-container">  
             <div class="feature-overflow">              
             <div class="feature-box">
-                <div class="feature-btn" id=""> <!-- add eventListener here -->
+                <div class="feature-btn" id="freeStyle"> <!-- add eventListener here -->
                     <i class="fas fa-2x fa-slash"></i>
                 </div>
             </div>
@@ -107,6 +107,8 @@
 
     <!-- jquery -->
     <script src="./02-javascript/jquery-3.3.1.min.js"></script>
+    <!-- js GlobalStyle script -->
+    <script src="./02-javascript/globalStyle.js"></script>
     <!-- js script -->
     <script src="./02-javascript/main.js"></script>
 
