--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
             </div>
 
             <div class="feature-box">
-                <div class="feature-btn" id=""> <!-- add eventListener here -->
+                <div class="feature-btn" id="rectangle"> <!-- add eventListener here -->
                     <i class="far fa-3x fa-square"></i>
                 </div>
             </div>
 
             <div class="feature-box">
-                <div class="feature-btn" id=""> <!-- add eventListener here -->
+                <div class="feature-btn" id="circle"> <!-- add eventListener here -->
                     <i class="fas fa-2x fa-slash"></i>
                 </div>
             </div>
