--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </div>
     
             <div class="feature-box">
-                <div class="feature-btn" id=""> <!-- add eventListener here -->
+                <div class="feature-btn" id="star"> <!-- add eventListener here -->
                     <i class="far fa-3x fa-square"></i>
                 </div>
             </div>
