--- a/TEST_ONLY/index.html
+++ b/TEST_ONLY/index.html
@@ -17,7 +17,7 @@
         <button id="triangle">Draw Triangle</button>
         <button id="circle">circle</button>
         <button id="curve">curve</button>
-        <button id="cruve">circle</button>
+        <button id="text">text</button>
     </div>
     <script src="jquery-3.3.1.min.js"></script>
     <script src="globalStyle.js"></script>
