--- a/index.html
+++ b/index.html
@@ -35,51 +35,59 @@
                     </div>
 
                     <div class="feature-box">
-                        <div class="feature-btn" id="rectangle">
-                            <!-- add eventListener here -->
-                            <img src="./01-assets/img/eraser.png" alt="drawing tool">
-                        </div>
-                    </div>
-
-                    <div class="feature-box">
-                        <div class="feature-btn" id="circle">
+                        <div class="feature-btn" id="straightLine">
                             <!-- add eventListener here -->
                             <img src="./01-assets/img/slash2.png" alt="drawing tool">
                         </div>
                     </div>
 
                     <div class="feature-box">
-                        <div class="feature-btn" id="star">
+                        <div class="feature-btn" id="curve">
                             <!-- add eventListener here -->
                             <img src="./01-assets/img/curve1.png" alt="drawing tool">
                         </div>
                     </div>
 
                     <div class="feature-box">
-                        <div class="feature-btn" id="">
+                        <div class="feature-btn" id="rectangle">
                             <!-- add eventListener here -->
                             <img src="./01-assets/img/rect2.png" alt="drawing tool">
                         </div>
                     </div>
 
                     <div class="feature-box">
-                        <div class="feature-btn" id="">
+                        <div class="feature-btn" id="circle">
                             <!-- add eventListener here -->
                             <img src="./01-assets/img/circle3.png" alt="drawing tool">
                         </div>
                     </div>
 
                     <div class="feature-box">
-                        <div class="feature-btn" id="">
+                        <div class="feature-btn" id="star">
                             <!-- add eventListener here -->
                             <img src="./01-assets/img/star.png" alt="drawing tool">
                         </div>
                     </div>
 
                     <div class="feature-box">
-                        <div class="feature-btn" id="">
+                        <div class="feature-btn" id="polygon">
                             <!-- add eventListener here -->
                             <img src="./01-assets/img/hexagon.png" alt="drawing tool">
+                        </div>
+                    </div>
+
+                    <div class="feature-box">
+                        <div class="feature-btn" id="textBox">
+                            <!-- add eventListener here -->
+                            <img src="./01-assets/img/text.png" alt="drawing tool">
+                        </div>
+                    </div>
+
+                    
+                    <div class="feature-box">
+                        <div class="feature-btn" id="eraser">
+                            <!-- add eventListener here -->
+                            <img src="./01-assets/img/eraser.png" alt="drawing tool">
                         </div>
                     </div>
 
@@ -228,14 +236,11 @@
 
     <!-- jquery -->
     <script src="./02-javascript/jquery-3.3.1.min.js"></script>
-    <!-- js GlobalStyle script -->
+    <!-- js self deinition js script -->
     <script src="./02-javascript/globalStyle.js"></script>
-    <!-- js script -->
+    <script src="./02-javascript/functionlity.js"></script>
+    <script src="./02-javascript/buttonBinding.js"></script>
     <script src="./02-javascript/main.js"></script>
-    <!-- global style js !!! to be added !!! -->
-
-    <!-- below js will be deleted once merged-->
-    <script src="./TEST_ONLY/globalStyle.js"></script>
 
 </body>
 
