--- a/index.html
+++ b/index.html
@@ -129,10 +129,10 @@
                 <div class="color-container">
                     <div class="color-box">
                         <div class="current-box inset-border">
-                            <div class="current-color-a" id="">
+                            <div class="current-color" id="color-a">
                                 <!-- add eventListener,change color -->
                             </div>
-                            <div class="current-color-b" id="">
+                            <div class="current-color" id="color-b">
                                 <!-- add eventListener,change color -->
                             </div>
                         </div>
