--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <canvas class="canvas" id="canvas-real" style="border: 2px #dfdfdf solid; border-style: ridge;">canvas
             real</canvas>
         <!-- #dfdfdf -->
-        <canvas class="canvas" id="canvas-draft">canvas draft</canvas>
+        <canvas class="canvas" id="canvas-draft" style="border: 2px #dfdfdf solid; border-style: ridge;">canvas draft</canvas>
     </div>
 
 
