--- a/index.html
+++ b/index.html
@@ -124,10 +124,9 @@
 
     <!-- canvas section -->
     <div class="canvas-wrapper">
-        <canvas class="canvas" id="canvas-real" style="border: 2px #dfdfdf solid; border-style: ridge;">canvas
-            real</canvas>
+        <canvas class="canvas" id="canvas-real" style="border: 2px #dfdfdf solid; border-style: ridge;">canvas real</canvas>
         <!-- #dfdfdf -->
-        <canvas class="canvas" id="canvas-draft">canvas draft</canvas>
+        <canvas class="canvas" id="canvas-draft"style="border: 2px #dfdfdf solid; border-style: ridge;">canvas draft</canvas>
     </div>
 
 
