--- a/index.html
+++ b/index.html
@@ -30,49 +30,49 @@
                         </div>
                     </div>
 
-                    <div class="feature-box" id="f-1">
+                    <div class="feature-box" id="f-2">
                         <div class="feature-btn" id="straightLine">
                             <img src="./01-assets/img/slash2.png" alt="drawing tool">
                         </div>
                     </div>
 
-                    <div class="feature-box" id="f-2">
+                    <div class="feature-box" id="f-3">
                         <div class="feature-btn" id="curve">
                             <img src="./01-assets/img/curve1.png" alt="drawing tool">
                         </div>
                     </div>
 
-                    <div class="feature-box" id="f-3">
+                    <div class="feature-box" id="f-4">
                         <div class="feature-btn" id="rectangle">
                             <img src="./01-assets/img/rect2.png" alt="drawing tool">
                         </div>
                     </div>
 
-                    <div class="feature-box" id="f-4">
+                    <div class="feature-box" id="f-5">
                         <div class="feature-btn" id="circle">
                             <img src="./01-assets/img/circle3.png" alt="drawing tool">
                         </div>
                     </div>
 
-                    <div class="feature-box" id="f-5">
+                    <div class="feature-box" id="f-6">
                         <div class="feature-btn" id="star">
                             <img src="./01-assets/img/star.png" alt="drawing tool">
                         </div>
                     </div>
 
-                    <div class="feature-box" id="f-6">
+                    <div class="feature-box" id="f-7">
                         <div class="feature-btn" id="polygon">
                             <img src="./01-assets/img/hexagon.png" alt="drawing tool">
                         </div>
                     </div>
 
-                    <div class="feature-box" id="f-7">
+                    <div class="feature-box" id="f-8">
                         <div class="feature-btn" id="textBox">
                             <img src="./01-assets/img/text.png" alt="drawing tool">
                         </div>
                     </div>
   
-                    <div class="feature-box" id="f-8">
+                    <div class="feature-box" id="f-9">
                         <div class="feature-btn" id="eraser">
                             <img src="./01-assets/img/eraser.png" alt="drawing tool">
                         </div>
@@ -81,21 +81,21 @@
 
                 <!-- feature section 2 -->
                 <div class="feature-section" id="f-sec2">
-                    <div class="feature-box"  id="f-9">
+                    <div class="feature-box"  id="f-10">
                         <div class="feature-btn" id="">
                             <!-- add eventListener here -->
                             <img src="./01-assets/img/emoji3.png" alt="emoji icon">
                         </div>
                     </div>
 
-                    <div class="feature-box"  id="f-10">
+                    <div class="feature-box"  id="f-11">
                         <div class="feature-btn" id="">
                             <!-- add eventListener here -->
                             <img src="./01-assets/img/emoji4.png" alt="emoji icon">
                         </div>
                     </div>
 
-                    <div class="feature-box"  id="f-11">
+                    <div class="feature-box"  id="f-12">
                         <div class="feature-btn" id="">
                             <!-- add eventListener here -->
                             <img src="./01-assets/img/slack.png" alt="emoji icon">
@@ -231,6 +231,7 @@
     <!-- jquery -->
     <script src="./02-javascript/jquery-3.3.1.min.js"></script>
     <!-- js self deinition js script -->
+    <script src="02-javascript/active-btn.js"></script>
     <script src="./02-javascript/globalStyle.js"></script>
     <script src="./02-javascript/functionlity.js"></script>
     <script src="./02-javascript/buttonBinding.js"></script>
