updated current color box

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
                 <!-- feature section 1 -->
                 <div class="feature-section" id="f-sec1">
-                    <div class="feature-box" id="f-1">  <!-- id for active btn -->
+                    <div class="feature-box" id="f-1">
                         <div class="feature-btn" id="freeStyle">
                             <img src="./01-assets/img/pen2.png" alt="drawing tool">
                         </div>
@@ -79,26 +79,23 @@
                     </div>
                 </div>
 
-                <!-- feature section 2 -->
+                <!-- feature section 2/ emoji icons -->
                 <div class="feature-section" id="f-sec2">
                     <div class="feature-box"  id="f-10">
-                        <div class="feature-btn" id="">
-                            <!-- add eventListener here -->
-                            <img src="./01-assets/img/emoji3.png" alt="emoji icon">
+                        <div class="feature-btn" id="emojiBox-1">
+                            <img class="emoji-1" src="./01-assets/img/emoji3.png" alt="emoji icon">
                         </div>
                     </div>
 
                     <div class="feature-box"  id="f-11">
-                        <div class="feature-btn" id="">
-                            <!-- add eventListener here -->
-                            <img src="./01-assets/img/emoji4.png" alt="emoji icon">
+                        <div class="feature-btn" id="emojiBox-2">
+                            <img class="emoji-2" src="./01-assets/img/emoji4.png" alt="emoji icon">
                         </div>
                     </div>
 
                     <div class="feature-box"  id="f-12">
-                        <div class="feature-btn" id="">
-                            <!-- add eventListener here -->
-                            <img src="./01-assets/img/slack.png" alt="emoji icon">
+                        <div class="feature-btn" id="emojiBox-3">
+                            <img class="emoji-3" src="./01-assets/img/slack.png" alt="emoji icon">
                         </div>
                     </div>
                 </div>
@@ -122,12 +119,12 @@
                 <!-- color picker -->
                 <div class="color-container">
                     <div class="color-box">
-                        <div class="current-box inset-border">
+
+                        <div class="current-box inset-border" id="current-box">
                             <div class="current-color" id="color-a">
-                                <!-- add eventListener,change color -->
                             </div>
-                            <div class="current-color" id="color-b">
-                                <!-- add eventListener,change color -->
+
+                            <div class="current-color default-index" id="color-b">
                             </div>
                         </div>
 
