updated image draw& reset

--- a/index.html
+++ b/index.html
@@ -83,19 +83,19 @@
                 <div class="feature-section" id="f-sec2">
                     <div class="feature-box"  id="f-10">
                         <div class="feature-btn" id="emojiBox-1">
-                            <img class="emoji-1" src="./01-assets/img/emoji3.png" alt="emoji icon">
+                            <img id="emoji-1" src="./01-assets/img/emoji3.png" alt="emoji icon">
                         </div>
                     </div>
 
                     <div class="feature-box"  id="f-11">
                         <div class="feature-btn" id="emojiBox-2">
-                            <img class="emoji-2" src="./01-assets/img/emoji4.png" alt="emoji icon">
+                            <img id="emoji-2" src="./01-assets/img/emoji4.png" alt="emoji icon">
                         </div>
                     </div>
 
                     <div class="feature-box"  id="f-12">
                         <div class="feature-btn" id="emojiBox-3">
-                            <img class="emoji-3" src="./01-assets/img/slack.png" alt="emoji icon">
+                            <img id="emoji-3" src="./01-assets/img/slack.png" alt="emoji icon">
                         </div>
                     </div>
                 </div>
