--- a/index.html
+++ b/index.html
@@ -232,7 +232,9 @@
     <script src="./02-javascript/globalStyle.js"></script>
     <script src="./02-javascript/functionlity.js"></script>
     <script src="./02-javascript/buttonBinding.js"></script>
+    <script src="./02-javascript/styleButtonBinding.js"></script>
     <script src="./02-javascript/main.js"></script>
+
 </body>
 
 </html>
