--- a/TEST_ONLY/index.html
+++ b/TEST_ONLY/index.html
@@ -18,6 +18,7 @@
         <button id="circle">circle</button>
         <button id="curve">curve</button>
         <button id="text">text</button>
+        <input type="text" id="text_cnv" size="40" maxlength="250" />
     </div>
     <script src="jquery-3.3.1.min.js"></script>
     <script src="globalStyle.js"></script>
