--- a/index.html
+++ b/index.html
@@ -214,6 +214,9 @@
                         <img src="./01-assets/img/default.png" alt="style icon">
                     </div>
                 </div>
+                <div>
+                    <input type="text" id="text_cnv">
+                </div>
             </div>
         </div>
     </div>
