--- a/index.html
+++ b/index.html
@@ -133,47 +133,36 @@
                         <div class="selected-wrapper">
                             <div class="selected-box">
                                 <div class="color-btn" id="picker-1">
-                                    <!-- add eventListener,different colors -->
                                 </div>
 
                                 <div class="color-btn" id="picker-2">
-                                    <!-- add eventListener,different colors -->
                                 </div>
 
                                 <div class="color-btn" id="picker-3">
-                                    <!-- add eventListener,different colors -->
                                 </div>
 
                                 <div class="color-btn" id="picker-4">
-                                    <!-- add eventListener,different colors -->
                                 </div>
 
                                 <div class="color-btn" id="picker-5">
-                                    <!-- add eventListener,different colors -->
                                 </div>
 
                                 <div class="color-btn" id="picker-6">
-                                    <!-- add eventListener,different colors -->
                                 </div>
 
                                 <div class="color-btn" id="picker-7">
-                                    <!-- add eventListener,different colors -->
                                 </div>
 
                                 <div class="color-btn" id="picker-8">
-                                    <!-- add eventListener,different colors -->
                                 </div>
 
                                 <div class="color-btn" id="picker-9">
-                                    <!-- add eventListener,different colors -->
                                 </div>
 
                                 <div class="color-btn" id="picker-10">
-                                    <!-- add eventListener,different colors -->
                                 </div>
 
                                 <div class="color-btn" id="picker-11">
-                                    <!-- add eventListener,different colors -->
                                 </div>
                             </div>
                         </div>
@@ -222,10 +211,13 @@
                         <img src="./01-assets/img/save1.png" alt="style icon">
                     </div>
                 </div>
+
+                <div class="textbox-wrapper">
                 <div class="style-box" id="text">
                     <div>
-                        <input type="text" id="text_cnv">
+                        <input type="text" placeholder="fill text here" id="text_cnv">
                     </div>
+                </div>
                 </div>
             </div>
         </div>
