--- a/index.html
+++ b/index.html
@@ -172,7 +172,8 @@
                                     <!-- add eventListener,different colors -->
                                 </div>
 
-                                <div class="color-btn" id="picker-11">
+                                <div id="picker-custom">
+                                    <input id='colorPicker' type="color" class="color-btn" style="padding: 0px"></button>
                                     <!-- add eventListener,different colors -->
                                 </div>
                             </div>
