--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
                     <div class="color-box">
 
                         <div class="current-box inset-border" id="current-box">
+                            
                             <div class="current-color" id="color-a">
                             </div>
 
@@ -213,12 +214,24 @@
                 </div>
 
                 <div class="textbox-wrapper">
-                <div class="style-box" id="text">
-                    <div>
-                        <input type="text" placeholder="fill text here" id="text_cnv">
+                    <div class="style-box" id="text">
+                        <div>
+                            <input type="text" placeholder="fill text here" id="text_cnv">
+                        </div>
                     </div>
                 </div>
-                </div>
+
+                <!-- xy axis -->
+                <!-- <div class="axis-wrapper">
+                    <div class="style-box" id="axis-box">
+                        <div class="style-btn" id="x-box">
+                            <span id="x-axis"></span>
+                            <span> : </span>
+                            <span id="y-axis"></span>
+                        </div>
+                    </div>
+                </div> -->
+
             </div>
         </div>
     </div>
