--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
 
                                 <div id="picker-custom">
                                     <input id='colorPicker' type="color" class="color-btn" style="padding: 0px" value="#BEEDD5">
+                                    <!-- default custom color -->
                                 </div>
                             </div>
                         </div>
