--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                 <div class="guide-wrapper" id="g-6">
                     <div class="guide-box">
                         <div class="guide-btn">
-                            <p class="guide-text"><b>key command:</b>&nbsp; `click`</p>
+                            <p class="guide-text"><b>key command:</b>&nbsp; `click + drag`</p>
                         </div>
                     </div>
                 </div>
@@ -271,7 +271,7 @@
                 <div class="guide-wrapper" id="g-7">
                     <div class="guide-box">
                         <div class="guide-btn">
-                            <p class="guide-text"><b>key command:</b>&nbsp; `click`</p>
+                            <p class="guide-text"><b>key command:</b>&nbsp; `opt + click`</p>
                         </div>
                     </div>
                 </div>
