--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="feature-container">
             <div class="feature-overflow">
                 <div class="feature-section" id="f-sec1">
-                    <div class="feature-box" id="f-1">
+                    <div class="feature-box feature-active" id="f-1">
                         <div class="feature-btn" id="freeStyle">
                             <img src="./01-assets/img/pen2.png" alt="drawing tool">
                         </div>
@@ -99,8 +99,12 @@
                 <div class="color-container">
                     <div class="color-box">
                         <div class="current-box inset-border" id="current-box">
-                            <div class="current-color" id="color-a"></div>
-                            <div class="current-color default-index" id="color-b"></div>
+                            <div class="current-color" id="color-a">
+                                <img src="01-Assets/img/paint.svg">
+                            </div>
+                            <div class="current-color default-index" id="color-b">
+                                <img src="./01-Assets/img/pen.svg">
+                            </div>
                         </div>
                         <div class="selected-wrapper">
                             <div class="selected-box">
