--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
                     <div class="color-box">
                         <div class="current-box inset-border" id="current-box">
                             <div class="current-color" id="color-a">
-                                <img src="./01-assets/img/slash1.png">
+                                <img src="./01-assets/img/paint.svg">
                             </div>
                             <div class="current-color default-index" id="color-b">
-                                <img src="./01-assets/img/pen1.png">
+                                <img src="./01-assets/img/pen.svg">
                             </div>
                         </div>
                         <div class="selected-wrapper">
